--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <version>0.1.0-SNAPSHOT</version>
 
     <name>CycloneDX for NuGet</name>
-    <description>The CycloneDX for NuGet creates an aggregate of all dependencies and transitive dependencies of a project and creates a valid CycloneDX bill-of-material document from the results. CycloneDX is a lightweight BoM specification that is easily created, human readable, and simple to parse.</description>
+    <description>CycloneDX for NuGet creates an aggregate of all dependencies and transitive dependencies of a project and creates a valid CycloneDX bill-of-material document from the results. CycloneDX is a lightweight BoM specification that is easily created, human readable, and simple to parse.</description>
     <url>https://github.com/CycloneDX/cyclonedx-maven-plugin</url>
     <inceptionYear>2017</inceptionYear>
     <organization>
